--- a/app/src/main/res/layout/activity_basket_screen.xml
+++ b/app/src/main/res/layout/activity_basket_screen.xml
@@ -41,18 +41,18 @@
             <!-- Пустая корзина -->
             <LinearLayout
                 android:id="@+id/layout_loading"
-                android:visibility="gone"
                 android:layout_width="match_parent"
+                android:layout_height="300dp"
                 android:background="@color/colorWhite"
-                android:layout_height="300dp">
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Ваша корзина пуста"
-                    android:textSize="16sp"
+                    android:layout_marginTop="40dp"
                     android:gravity="center"
-                    android:layout_marginTop="40dp"/>
+                    android:text="Ваша корзина пуста"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <TextView
@@ -81,35 +81,44 @@
                         android:textSize="16sp" />
 
                     <EditText
+                        android:id="@+id/txt_surname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         android:background="@drawable/border_text_gray"
                         android:hint="Фамилия"
+                        android:maxLength="50"
                         android:padding="10dp" />
 
                     <EditText
+                        android:id="@+id/txt_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         android:background="@drawable/border_text_gray"
                         android:hint="Имя"
+                        android:maxLength="50"
                         android:padding="10dp" />
 
                     <EditText
+                        android:id="@+id/txt_mail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         android:background="@drawable/border_text_gray"
                         android:hint="E-mail ( mail@mail.ru )"
+                        android:maxLength="100"
                         android:padding="10dp" />
 
                     <EditText
+                        android:id="@+id/txt_tell"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         android:background="@drawable/border_text_gray"
                         android:hint="Телефон ( +7 (900) 594-43-59 )"
+                        android:inputType="phone"
+                        android:maxLength="12"
                         android:padding="10dp" />
                 </LinearLayout>
                 <!-- Способ получения -->
@@ -123,19 +132,44 @@
                         android:layout_height="wrap_content"
                         android:text="Укажите способ получений"
                         android:textSize="16sp" />
-
+                    <!-- Самовывоз -->
                     <LinearLayout
+                        android:id="@+id/linear_pickup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/border_green"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/image_pickup"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_marginRight="10sp"
                             android:padding="5dp"
-                            app:srcCompat="@drawable/plane" />
+                            app:srcCompat="@drawable/point" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Самовымоз из пункта выдачи" />
+                    </LinearLayout>
+                    <!-- Курьерская служба -->
+                    <LinearLayout
+                        android:id="@+id/layout_courier"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:background="@drawable/border_text_gray"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/image_courier"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="10sp"
+                            android:padding="5dp"
+                            app:srcCompat="@drawable/plane_true" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -143,33 +177,79 @@
                             android:text="Курьерская служба" />
                     </LinearLayout>
 
+                </LinearLayout>
+                <!-- Самовымоз -->
+                <LinearLayout
+                    android:id="@+id/layout_delivery_maps"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_width="match_parent" android:orientation="horizontal"
+                        android:layout_height="wrap_content">
 
                         <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginRight="10sp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:padding="5dp"
-                            app:srcCompat="@drawable/point_true" />
-
+                            app:srcCompat="@drawable/map" />
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Самовымоз из пункта выдачи" />
+                            android:layout_gravity="center"
+                            android:text="Забрать товар вы можете по адресу: г. Челябинск, ул. Газизулина, 2Б"/>
                     </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        app:srcCompat="@drawable/maps" />
+                </LinearLayout>
+                <!-- Адрес доставки -->
+                <LinearLayout
+                    android:id="@+id/layout_delivery"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Укажите адрес доставки"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/txt_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/border_text_gray"
+                        android:hint="Адрес доставки"
+                        android:maxLength="200"
+                        android:padding="10dp" />
+
+                    <EditText
+                        android:id="@+id/txt_details_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/border_text_gray"
+                        android:hint="Дополнение (Квартира\подьезд)"
+                        android:maxLength="200"
+                        android:padding="10dp" />
                 </LinearLayout>
                 <!-- Примечание к заказу -->
                 <EditText
+                    android:id="@+id/txt_note"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:layout_margin="5dp"
                     android:background="@drawable/border_text_gray"
                     android:gravity="top"
                     android:hint="Примечание к заказу"
+                    android:maxLength="1000"
                     android:padding="10dp" />
                 <!-- Стоисомть и оформление заказа -->
                 <LinearLayout
@@ -202,6 +282,7 @@
                         android:textSize="16sp" />
 
                     <Button
+                        android:id="@+id/btn_order"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
