--- a/app/src/main/res/layout/activity_product_screen.xml
+++ b/app/src/main/res/layout/activity_product_screen.xml
@@ -100,6 +100,7 @@
                         <TextView
                             android:id="@+id/txt_brand"
                             android:layout_width="wrap_content"
+                            android:maxLines="1"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:background="@drawable/border_text_black"
@@ -249,6 +250,7 @@
                         android:layout_marginBottom="10dp"
                         android:orientation="vertical" />
                 </LinearLayout>
+
                 <!-- Нижнее меню -->
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -263,6 +265,14 @@
                         android:padding="2dp"
                         android:text="* Технические характеристики и комплект поставки могут быть изменены производителем без предварительного уведомления."
                         android:textSize="12sp" />
+                    <TextView
+                        android:id="@+id/txt_error_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorWhite"
+                        android:paddingLeft="5dp"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:text="Сообщить об ошибке в описании *"/>
 
                     <View
                         android:layout_width="match_parent"
