--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -48,11 +48,11 @@
                     android:layout_marginRight="10dp"
                     android:text="38 500 ₽"
                     android:textColor="@color/colorBlack"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/btn_by"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="26dp"
                     android:background="@color/colorGreen"
                     android:text="Купить"
@@ -67,6 +67,11 @@
                     android:id="@+id/txt_brand"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="0dp"
+                    android:maxLines="1"
+                    android:layout_marginEnd="0dp"
+                    android:layout_toStartOf="@+id/txt_nal"
                     android:text="Piusi, Италия" />
 
                 <TextView
@@ -117,11 +122,11 @@
                     android:layout_marginRight="10dp"
                     android:text="38 500 ₽"
                     android:textColor="@color/colorBlack"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
                 <!-- Приобрести товар -->
                 <Button
                     android:id="@+id/btn1_by"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="26dp"
                     android:background="@color/colorGreen"
                     android:text="Купить"
@@ -136,6 +141,11 @@
                     android:id="@+id/txt1_brand"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_toStartOf="@+id/txt1_nal"
+                    android:maxLines="1"
                     android:text="Piusi, Италия" />
 
                 <TextView
