--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-
+    <color name="colorBlack">#000000</color>
     <color name="colorGreen">#1CAC64</color>
-    <color name="colorGray">#DCDCDC</color>
+    <color name="colorGray">#C1C1C1</color>
     <color name="colorWhite">#FFFFFF</color>
 </resources>
