--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,11 +19,12 @@
         <item name="android:background">@color/colorWhite</item>
     </style>
     <!-- Название товаров и категорий -->
-    <style name="txtNameProductAndCategory">
+    <style name="txtNameProductAndCategoryStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:paddingLeft">5dp</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:paddingRight">5dp</item>
+        <item name="android:ellipsize">end</item>
     </style>
 </resources>
