--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorGreen">#1CAC64</color>
     <color name="colorGray">#C1C1C1</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlue">#4682FF</color>
 </resources>
