--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/item_main"
-        android:icon="@drawable/menu"
+        android:icon="@drawable/main"
         android:title="Главная" />
     <item
         android:id="@+id/item_category"
-        android:icon="@drawable/menu"
+        android:icon="@drawable/product"
         android:title="Категории" />
     <item
         android:id="@+id/item_basket"
@@ -14,6 +14,6 @@
         android:title="Корзина" />
     <item
         android:id="@+id/item_user"
-        android:icon="@drawable/menu"
-        android:title="Мой профиль" />
+        android:icon="@drawable/info"
+        android:title="Информация" />
 </menu>
